# pyresume

./: .env  .env.example  .gitignore  DEPLOYMENT.md  alembic.ini  db.sqlite3  docker-compose.yml  init.sql  main.py  pyproject.toml  start_backend.bat  start_frontend.bat  test_app.py
alembic/: env.py
alembic/versions/: 9faafc0d9179_init_tables.py
backend/: .dockerignore  database.py  dependencies.py  dockerfile  pyproject.toml  start.sh
backend/config/: __init__.py  mysql_config.py  settings.py
backend/configs/: settings.py  urls.py
backend/dao/: __init__.py  base.py  dao_application.py  dao_platform.py
backend/models/: __init__.py  job_application.py  job_platform.py
backend/pyresume/: STATUS_GUIDE.md  api_test.py  models.py  urls.py  views.py
backend/pyresume/migrations/: 0001_initial.py  0002_application_pyresume_ap_user_id_035022_idx_and_more.py
backend/routers/: __init__.py  router_application.py  router_platform.py
backend/schemas/: __init__.py  schema_application.py  schema_platform.py
backend/services/: __init__.py  base.py  service_application.py  service_platform.py
backend/user/: models.py  views.py
backend/utils/: register.py
configs/: settings.py  urls.py
docs/: fastapi_crud-0.0.3-py3-none-any.whl  fastapi_crud-0.1.0-py3-none-any.whl
frontend/: .dockerignore  dockerfile  index.html  nginx.conf  package.json  vite.config.js
frontend/src/: App.jsx  nav-items.jsx
pyresume/: README.md  admin.py  apps.py  models.py  test_api.py  test_auth.py  views.py  views.py.backup
user/: models.py  urls.py  utils.py  views.py
(+18 files in other folders)
