[project]
name = "winterbaas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.5",
    "django-filter>=25.1",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "django-cors-headers>=4.3.1",
    "mysqlclient>=2.2.7",
]
[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
